--- a/src/main/resources/templates/pages/registroPacientes.html
+++ b/src/main/resources/templates/pages/registroPacientes.html
@@ -15,8 +15,8 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Sprint</span>
+            <img src="/imagenes/icono.jpg" class="h-8" alt="Flowbite Logo" />
+            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Actividad Contacto Docente 1</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
@@ -33,7 +33,7 @@
                     <a th:href="@{/registroPacientes}" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Registro de pacientes</a>
                 </li>
                 <li>
-                    <a th:href="@{/listaPacientes}" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Lista de pacientes</a>
+                    <a th:href="@{/vistaPaciente}" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Lista de pacientes</a>
                 </li>
 
             </ul>
@@ -52,14 +52,14 @@
 
     <div class="flex gap-4 mb-5">
         <div class="w-1/2">
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre</label>
+            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre (3-45)</label>
             <input type="text" th:field="*{nombre}"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
             <span th:if="${#fields.hasErrors('nombre')}" th:errores="*{nombre}">Error de nombre</span>
 
         </div>
 
         <div class="w-1/2">
-            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Apellido</label>
+            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Apellido (3-45) </label>
             <input type="text" th:field="*{apellido}"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
             <span th:if="${#fields.hasErrors('apellido')}" th:errores="*{apellido}">Error de Apellido</span>
 
@@ -67,14 +67,14 @@
     </div>
         <div class="flex gap-4 mb-5">
             <div class="w-1/2">
-                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Cédula</label>
+                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Cédula (10 dígitos)</label>
                 <input type="text" th:field="*{cedula}"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('cedula')}" th:errores="*{cedula}">Error de Cédula</span>
 
             </div>
 
             <div class="w-1/2">
-                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Edad</label>
+                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Edad (1-100)</label>
                 <input type="text" th:field="*{edad}"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('edad')}" th:errores="*{edad}">Error de Edad</span>
 
@@ -119,14 +119,14 @@
 
         <div class="flex gap-4 mb-5">
             <div class="w-1/2">
-                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Peso</label>
+                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Peso (1-300 lib)</label>
                 <input type="text" th:field="*{peso}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('peso')}" th:errores="*{peso}">Error de peso</span>
 
             </div>
 
             <div class="w-1/2">
-                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Talla</label>
+                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Talla (20-210 cm)</label>
                 <input type="text" th:field="*{talla}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('talla')}" th:errores="*{talla}">Error de talla</span>
 
@@ -137,14 +137,14 @@
 
         <div class="flex gap-4 mb-5">
             <div class="w-1/2">
-                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Presión Arterial</label>
+                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Presión Arterial (60-180)</label>
                 <input type="text" th:field="*{presionArterial}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('presionArterial')}" th:errores="*{presionArterial}">Error de Presión Arterial</span>
 
             </div>
 
             <div class="w-1/2">
-                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Frecuencia Cardiaca</label>
+                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Frecuencia Cardiaca (60-180)</label>
                 <input type="text" th:field="*{frecuenciaCardiaca}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('frecuenciaCardiaca')}" th:errores="*{frecuenciaCardiaca}">Error Frecuencia Cardiaca</span>
 
@@ -197,14 +197,14 @@
 
         <div class="flex gap-4 mb-5">
             <div class="w-1/2">
-                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">teléfono convencional</label>
+                <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">teléfono convencional (9 digitos)</label>
                 <input type="text" th:field="*{telefonoConvencional}"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('telefonoConvencional')}" th:errores="*{telefonoConvencional}">Error de telefono</span>
 
             </div>
 
             <div class="w-1/2">
-                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">teléfono celular</label>
+                <label  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">teléfono celular (10 digitos)</label>
                 <input type="text" th:field="*{telefonoCelular}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                 <span th:if="${#fields.hasErrors('telefonoCelular')}" th:errores="*{telefonoCelular}">Error de telefono Celular</span>
 
@@ -231,9 +231,44 @@
         </div>
 
         <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Registrar</button>
-</form>
+
+
+        <button type="reset" class="text-white bg-gray-500 hover:bg-gray-600 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-700 dark:hover:bg-gray-800 dark:focus:ring-gray-900">
+            Limpiar
+        </button>
+    </form>
 
 <!--FORMULARIO REGISTRO-->
+
+
+
+<footer class="bg-white rounded-lg shadow-sm dark:bg-gray-900 m-4">
+    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <a href="http://localhost:8080/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                <img src="/imagenes/icono.jpg" class="h-8" alt="Flowbite Logo" />
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Actividad Contacto Docente</span>
+            </a>
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Acerca de</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Política de privacidad</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Licenciamiento</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">Contacto</a>
+                </li>
+            </ul>
+        </div>
+        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="http://localhost:8080/" class="hover:underline">DC™</a>. Todos los derechos reservados.</span>
+    </div>
+</footer>
+
 
 </body>
 </html>
